Nov. 29, 2010 Ping Cheng <pingc@wacom.com>
Initialize release
Support kernels: 2.6.26 and later
